feat: convert relative timestamps on github
Signed-off-by: Emanuele Triuzzi <etri@bendingspoons.com>

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -107,12 +107,17 @@
         <span class="keyboard">Loading...</span>
     </button>
 
+    <button id="convertRelativeTime">
+        Convert Time to Absolute
+        <span class="keyboard">Loading...</span>
+    </button>
+
     <div class="config-link" id="configureShortcuts">
         ⚙️ Configure Shortcuts
     </div>
 
     <div class="footer">
-        v1.1 &bull; Tab Shortcuts Extension
+        v1.3 &bull; Tab Shortcuts Extension
     </div>
 
     <script src="popup.js"></script>
